DTSCCI-3132 clean up